# unsafe-coerce

./: .gitignore  Cargo.toml  build.rs  justfile  rustfmt.toml
.githooks/: pre-commit
src/: lib.rs  ptr.rs
