[package]
name = "unsafe-coerce"
version = "0.0.0"
license = "MPL-2.0"
authors = ["Yu Shimura <mail@yuhr.org>"]
description = ""
repository = "https://github.com/yuhr/unsafe-coerce"
categories = ["rust-patterns", "no-std"]
keywords = ["unsafe", "coerce", "pointer"]
edition = "2021"
exclude = [".*", "*.toml", "justfile"]

[features]
default = []
nightly = ["const"]
const = []

[build-dependencies]
cargo_metadata = "0.15.2"
rustc_version = "0.4.0"